SET(SHAPEODDS_HEADER_FILES
  ShapeOdds.h
)

SET(SHAPEODDS_SOURCE_FILES
  ShapeOdds.cpp
)

ADD_LIBRARY(shapeodds ${SHAPEODDS_HEADER_FILES} ${SHAPEODDS_SOURCE_FILES})
TARGET_INCLUDE_DIRECTORIES(shapeodds PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
  $<INSTALL_INTERFACE:include>)
TARGET_LINK_LIBRARIES(shapeodds
  dspacex_utils
  lodepng)
