PROJECT(SharedGP)

include(External-libigl)

SET(SHAREDGP_HEADER_FILES
  SharedGP.h
)

SET(SHAREDGP_SOURCE_FILES
  SharedGP.cpp
)

ADD_LIBRARY(sharedgp ${SHAREDGP_HEADER_FILES} ${SHAREDGP_SOURCE_FILES})
TARGET_INCLUDE_DIRECTORIES(sharedgp ${LIBIGL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(sharedgp igl::core)
