PROJECT(SharedGP)

SET(SHAREDGP_HEADER_FILES
  SharedGP.h
)

SET(SHAREDGP_SOURCE_FILES
  SharedGP.cpp
)

ADD_LIBRARY(sharedgp ${SHAREDGP_HEADER_FILES} ${SHAREDGP_SOURCE_FILES})
TARGET_INCLUDE_DIRECTORIES(sharedgp PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
  $<INSTALL_INTERFACE:include>)
