PROJECT(SampleBE)

IF (${CMAKE_VERSION} VERSION_GREATER "3.0.0") 
  CMAKE_POLICY(SET CMP0042 OLD)
ENDIF()

FIND_PACKAGE(PNG)
FIND_PACKAGE(JPEG)


SET(SAMPLE_BACKEND_SOURCE_FILES
  sampleBE.c
  thumbs.c)

INCLUDE_DIRECTORIES(../include)
IF(APPLE)
  INCLUDE_DIRECTORIES("/usr/local/include")
endif(APPLE)

ADD_LIBRARY(sampleBE MODULE ${SAMPLE_BACKEND_SOURCE_FILES} ${JPEG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(sampleBE ${PNG_LIBRARY} ${JPEG_LIBRARY})
SET_TARGET_PROPERTIES(sampleBE PROPERTIES LINK_FLAGS "-undefined dynamic_lookup" SUFFIX ".so")
