PROJECT(SciBE)

SET(SCI_BACKEND_SOURCE_FILES sciBE.cpp)

INCLUDE_DIRECTORIES(../include)
IF(APPLE)
  INCLUDE_DIRECTORIES("/usr/local/include")
endif(APPLE)

ADD_LIBRARY(SciBE MODULE ${SAMPLE_BACKEND_SOURCE_FILES})
TARGET_LINK_LIBRARIES(SciBE hdprocess)
SET_TARGET_PROPERTIES(SciBE PROPERTIES LINK_FLAGS "-undefined dynamic_lookup" SUFFIX ".so")
