PROJECT(SciBE)

IF (${CMAKE_VERSION} VERSION_GREATER "3.0.0")
  CMAKE_POLICY(SET CMP0042 OLD)
ENDIF()

FIND_PACKAGE(PNG)
FIND_PACKAGE(JPEG)

SET(SCI_BACKEND_SOURCE_FILES
  sciBE.cpp 
  thumbs.c)

INCLUDE_DIRECTORIES(../include)
IF(APPLE)
  INCLUDE_DIRECTORIES("/usr/local/include")
ENDIF(APPLE)

ADD_LIBRARY(SciBE MODULE ${SCI_BACKEND_SOURCE_FILES} ${JPEG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(SciBE hdprocess ${PNG_LIBRARY} ${JPEG_LIBRARY})
IF(APPLE)
SET_TARGET_PROPERTIES(SciBE PROPERTIES LINK_FLAGS "-undefined dynamic_lookup" SUFFIX ".so")
ENDIF(APPLE)
